--- a/app/scss/components/_minipod.scss
+++ b/app/scss/components/_minipod.scss
@@ -229,6 +229,7 @@ i {
     height: 8em;
     background-color: #333;
     pointer-events: none;
+    will-change: transform;
     animation: pulse 1s ease-in alternate infinite;
   }
 
