major update, added fans & awnings

--- a/app/scss/sections/_bundle.scss
+++ b/app/scss/sections/_bundle.scss
@@ -36,6 +36,10 @@
       }
     }
 
+    &--awning-back {
+      margin-top: -2rem;
+    }
+
     &--shadow {
       position: absolute;
       left: 50%;
