--- a/app/scss/components/_gallery.scss
+++ b/app/scss/components/_gallery.scss
@@ -45,8 +45,6 @@
     }
   }
 
-
-
   &__i300 {
     display: flex;
     flex-direction: column;
@@ -54,6 +52,34 @@
 
     @include breakpoint(sm-tablet) {
       flex-direction: row;
+    }
+  }
+
+  &__awnings {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    gap: 1rem;
+    grid-auto-flow: row;
+    grid-template-areas:
+      "photo-1 photo-2"
+      "photo-3 photo-4"
+      "photo-5 photo-6";
+
+    @include breakpoint(sm-tablet) {
+      grid-template-columns: repeat(6, 1fr);
+      grid-template-rows: repeat(1, 1fr);
+      grid-template-areas:
+        "photo-1 photo-2 photo-3 photo-4 photo-5 photo-6";
+      gap: 0.5rem;
+    }
+
+    @include breakpoint(md-mobile) {
+      grid-template-columns: repeat(3, 1fr);
+      grid-template-rows: repeat(2, 1fr);
+      grid-template-areas:
+        "photo-1 photo-2 photo-3"
+        "photo-4 photo-5 photo-6";
+      gap: 0.5rem;
     }
   }
 }
@@ -252,6 +278,15 @@
 
     @include breakpoint(lg-tablet) {
       // height: 50px;
+    }
+  }
+
+  &__awning {
+    height: 70px;
+    min-width: 80px;
+
+    @include breakpoint(lg-tablet) {
+      height: 50px;
     }
   }
 }
