--- a/app/scss/sections/_hero.scss
+++ b/app/scss/sections/_hero.scss
@@ -299,16 +299,12 @@
   }
 
   &__img {
-    filter: drop-shadow(0px 8px 12px rgba(0, 0, 0, .2));
+    width: 250px;
 
-    img {
-      width: 250px;
-
-      @include breakpoint(lg-tablet) {
-        position: relative;
-        left: 50%;
-        transform: translateX(-50%);
-      }
+    @include breakpoint(lg-tablet) {
+      position: relative;
+      left: 50%;
+      transform: translateX(-50%);
     }
 
     &-anchor {
@@ -350,6 +346,10 @@
       border: 1px solid var(--yellow-500);
       background-color: var(--yellow-100);
     }
+  }
+
+  &__company {
+    width: 400px;
   }
 
   &__partnership {
