--- a/app/scss/utils/_flex.scss
+++ b/app/scss/utils/_flex.scss
@@ -60,6 +60,12 @@
 
 .ai-c {
   align-items: center;
+
+  &--tablet {
+    @include breakpoint(lg-tablet) {
+      align-items: center;
+    }
+  }
 }
 
 .ai-b {
