--- a/app/scss/components/_form.scss
+++ b/app/scss/components/_form.scss
@@ -10,7 +10,7 @@ form {
   padding: 2rem;
   border-radius: 10px;
 
-  @include breakpoint(sm-desktop) {
+  @include breakpoint(lg-tablet) {
     margin: 0 auto;
   }
 
