--- a/app/scss/components/_cards.scss
+++ b/app/scss/components/_cards.scss
@@ -38,6 +38,30 @@
       margin: 0 auto 0;
     }
   }
+
+  &--awnings {
+    max-width: calc(1080px / 1.5);
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(3, auto);
+
+    .card-1 {
+      grid-row: 1 / 3;
+    }
+
+    .card-2 {
+      grid-row: 1 / 2;
+    }
+
+    .card-3 {
+      grid-row: 2 / 3;
+    }
+
+    .card-4 {
+      height: 48px;
+      grid-column: 1 / 3;
+      grid-row: 3 / 3;
+    }
+  }
 }
 
 .card {
