update awnings gallery

--- a/app/scss/components/_gallery.scss
+++ b/app/scss/components/_gallery.scss
@@ -56,29 +56,16 @@
   }
 
   &__awnings {
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, 1fr);
     gap: 1rem;
     grid-auto-flow: row;
     grid-template-areas:
-      "photo-1 photo-2"
-      "photo-3 photo-4"
-      "photo-5 photo-6";
-
-    @include breakpoint(sm-tablet) {
-      grid-template-columns: repeat(6, 1fr);
-      grid-template-rows: repeat(1, 1fr);
-      grid-template-areas:
-        "photo-1 photo-2 photo-3 photo-4 photo-5 photo-6";
-      gap: 0.5rem;
-    }
+      "photo-1 photo-4 photo-7"
+      "photo-2 photo-5 photo-8"
+      "photo-3 photo-6 photo-9";
 
     @include breakpoint(md-mobile) {
-      grid-template-columns: repeat(3, 1fr);
-      grid-template-rows: repeat(2, 1fr);
-      grid-template-areas:
-        "photo-1 photo-2 photo-3"
-        "photo-4 photo-5 photo-6";
       gap: 0.5rem;
     }
   }
@@ -160,6 +147,7 @@
     font-size: 0.9rem;
     font-weight: 600;
     letter-spacing: -0.4px;
+    text-align: center;
   }
 
   &__instructions {
