--- a/app/scss/components/_cards.scss
+++ b/app/scss/components/_cards.scss
@@ -61,6 +61,19 @@
       grid-column: 1 / 3;
       grid-row: 3 / 3;
     }
+
+    @include breakpoint(md-tablet) {
+      grid-template-columns: repeat(1, 1fr);
+      grid-template-rows: auto;
+
+      .card-1,
+      .card-2,
+      .card-3,
+      .card-4 {
+        grid-column: auto;
+        grid-row: auto;
+      }
+    }
   }
 }
 
