--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -23,10 +23,10 @@
 @use "sections/pricing";
 @use "sections/bundle";
 @use "sections/turnkey";
-@use "sections/voskcoin";
 @use "sections/interview";
 @use "sections/recruitment";
 @use "sections/contact";
+@use "sections/press";
 @use "utils/flex";
 @use "utils/grid";
 @use "utils/utilities";
