--- a/app/scss/utils/_spacing.scss
+++ b/app/scss/utils/_spacing.scss
@@ -145,8 +145,16 @@
     margin-top: 3rem;
   }
 
-  &--xxl {
+  &--2xl {
     margin-top: 4rem;
+  }
+
+  &--3xl {
+    margin-top: 6rem;
+  }
+
+  &--4xl {
+    margin-top: 8rem;
   }
 }
 
@@ -167,8 +175,16 @@
     margin-bottom: 3rem;
   }
 
-  &--xxl {
-    margin-bottom: 4rem;
+  &--2xl {
+    margin-top: 4rem;
+  }
+
+  &--3xl {
+    margin-top: 6rem;
+  }
+
+  &--4xl {
+    margin-top: 8rem;
   }
 }
 
