--- a/app/scss/utils/_spacing.scss
+++ b/app/scss/utils/_spacing.scss
@@ -50,24 +50,28 @@
     }
   }
 
-  &--press {
-    padding: 3rem 2rem;
-  }
-
   &--full-width {
     max-width: 100%;
   }
 
-  &--lg {
-    padding: 4rem 2rem;
+  &--sm {
+    padding: 0 2rem;
   }
 
   &--md {
     padding: 2rem;
   }
 
-  &--sm {
-    padding: 0 2rem;
+  &--lg {
+    padding: 4rem 2rem;
+  }
+
+  &--xl {
+    padding: 6rem 2rem;
+  }
+
+  &--2xl {
+    padding: 8rem 2rem;
   }
 
   &__promotion {
@@ -81,24 +85,6 @@
   
   &__text {
     max-width: 55ch;
-  }
-
-  /* The reason for the following two classes is to push down the main content because GSAP SmoothScroller adds a position:fixed container around the main content with an inset:0px which forces the content to move all the way to the top of the page and gets overlapped by the navbar and subnav */
-
-  &--navbar {
-    padding-top: calc(var(--navbar) + 4rem); // 73px is the height of the navbar
-
-    @include breakpoint(md-mobile) {
-      padding-top: calc(var(--navbar) - 2rem);
-    }
-  }
-
-  &--subnav {
-    padding-top: calc(var(--subnav) + 4rem); // 128px is the height of the navbar (73px) + subnav (~56px)
-
-    @include breakpoint(md-mobile) {
-      padding-top: calc(var(--navbar) - 2rem);
-    }
   }
 }
 
