--- a/app/scss/sections/_press.scss
+++ b/app/scss/sections/_press.scss
@@ -20,12 +20,12 @@
     }
   }
 
-  .animation {
+  &__animation {
     position: relative;
     z-index: -1;
     opacity: 0.75;
 
-    &__container {
+    &-container {
       position: absolute;
       top: -500px;
       right: 10%;
@@ -49,6 +49,7 @@
       offset-distance: 0;
       animation: rising-star 5s ease-in infinite;
       opacity: 0;
+      transform-origin: center center;
     }
 
     .star-1 {
@@ -140,6 +141,9 @@
 
     &-post {
       display: inline-grid;
+      flex-direction: column;
+      gap: 2rem;
+      justify-content: space-between;
       background-color: var(--blue-gray-50);
       border: 1px solid var(--blue-gray-100);
       border-radius: 10px;
@@ -173,7 +177,7 @@
     }
 
     &-img {
-      max-width: 250px;
+      max-width: 150px;
       object-fit: contain;
     }
   }
