--- a/app/scss/sections/_press.scss
+++ b/app/scss/sections/_press.scss
@@ -1,6 +1,6 @@
 @use "../base/breakpoints" as *;
 
-#press,
+#announcements,
 #articles,
 #podcasts {
   scroll-margin-top: calc(72px + 57px + 2rem); // navbar + subnav + extra padding
@@ -23,13 +23,20 @@
   &__animation {
     position: relative;
     z-index: -1;
-    opacity: 0.75;
+    opacity: 0.6;
 
     &-container {
-      position: absolute;
-      top: -500px;
-      right: 10%;
-      transform: translateX(30%);
+      position: fixed;
+      top: 10px;
+      transform: translateX(16%);
+
+      @include breakpoint(lg-tablet) {
+        transform: translateX(-7%);
+      }
+
+      @include breakpoint(md-mobile) {
+        transform: translateX(-33%);
+      }
     }
 
     .grid-lines {
@@ -101,36 +108,24 @@
     }
   }
 
-  &__divider {
-    display: flex;
-    gap: 2rem;
-    align-items: center;
-    justify-content: center;
-    margin: 6rem 0;
-
-    @include breakpoint(md-tablet) {
-      gap: 1rem;
-    }
-
-    @include breakpoint(md-mobile) {
-      gap: 0.5rem;
-    }
-
-    &-shape {
-      min-height: 4px;
-      min-width: 9px;
-      border-radius: 1.3px;
-      background-color: var(--blue-gray-100);
-    }
+  #announcements {
+    margin-top: 0;
   }
 
   &__release {
+    margin-top: 8rem;
+
     &-list {
       display: grid;
-      grid-template-columns: repeat(2, 1fr);
+      grid-template-columns: repeat(3, 1fr);
       gap: 2rem;
+      margin-top: 3rem;
 
       @include breakpoint(md-tablet) {
+        grid-template-columns: repeat(2, 1fr);
+      }
+
+      @include breakpoint(md-mobile) {
         grid-template-columns: 1fr;
       }
     }
@@ -142,7 +137,7 @@
     &-post {
       display: inline-grid;
       flex-direction: column;
-      gap: 2rem;
+      gap: 1rem;
       justify-content: space-between;
       background-color: var(--blue-gray-50);
       border: 1px solid var(--blue-gray-100);
@@ -161,10 +156,17 @@
       }
     }
 
+    &-grid {
+      display: grid;
+      grid-template-rows: 15px auto auto;
+      gap: 0.5rem;
+    }
+
     &-title {
-      font-size: clamp(1.25rem, 2vw, 1rem);
+      font-size: clamp(0.9rem, 2vw, 1rem);
       line-height: 1.3;
       color: var(--blue-gray-900);
+      font-weight: 600;
     }
 
     &-body {
@@ -177,16 +179,21 @@
     }
 
     &-img {
-      max-width: 150px;
+      max-width: 175px;
       object-fit: contain;
     }
   }
 
   &__cta {
-    padding-bottom: 6rem;
+    padding: 6rem 0;
 
     h3 {
+      max-width: 29ch;
       line-height: 1.3;
+    }
+
+    .btn {
+      margin-top: 2rem;
     }
   }
 }
