--- a/app/scss/sections/_press.scss
+++ b/app/scss/sections/_press.scss
@@ -21,7 +21,7 @@
 
     &-container {
       position: fixed;
-      top: 10px;
+      top: 0;
       transform: translateX(16%);
 
       @include breakpoint(lg-tablet) {
@@ -141,8 +141,8 @@
     }
 
     &-post {
-      display: inline-grid;
-      flex-direction: column;
+      display: grid;
+      grid-template-rows: 1fr auto;
       gap: 1rem;
       justify-content: space-between;
 
@@ -157,6 +157,31 @@
       gap: 0.5rem;
     }
 
+    &-date {
+      color: var(--blue-gray-400);
+    }
+
+    &-tag {
+      font-size: clamp(0.6rem, 1vw, 0.65rem);
+      padding: 0.05rem 0.4rem;
+      border-radius: 100vh;
+
+      &--announcement {
+        background-color: var(--blue-gray-100);
+        color: var(--blue-gray-700);
+      }
+
+      &--article {
+        background-color: var(--blue-100);
+        color: var(--blue-700);
+      }
+
+      &--podcast {
+        background-color: var(--yellow-100);
+        color: var(--yellow-700);
+      }
+    }
+
     &-title {
       font-size: clamp(0.9rem, 2vw, 1rem);
       line-height: 1.3;
@@ -169,12 +194,8 @@
       letter-spacing: 0;
     }
 
-    &-date {
-      color: var(--blue-gray-400);
-    }
-
     &-img {
-      max-width: 175px;
+      max-width: 140px;
       object-fit: contain;
     }
   }
