--- a/app/scss/components/_gallery.scss
+++ b/app/scss/components/_gallery.scss
@@ -3,7 +3,7 @@
 .gallery {
   display: grid;
 
-  &__m300 {
+  &__3x2 {
     position: absolute;
     transform: translateY(-70px) translateX(250px);
     grid-template-columns: repeat(2, 1fr);
@@ -34,7 +34,6 @@
       grid-template-areas:
         "photo-3 photo-4 photo-5"
         "photo-6 photo-7 photo-8";
-      // transform: translateY(-200%) translateX(-50%);
       top: 100%;
       gap: 0.5rem;
     }
@@ -45,7 +44,7 @@
     }
   }
 
-  &__i300 {
+  &__col-1 {
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
@@ -55,7 +54,7 @@
     }
   }
 
-  &__awnings {
+  &__3x3 {
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, 1fr);
     gap: 1rem;
