--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -28,6 +28,7 @@
 @use "sections/recruitment";
 @use "sections/contact";
 @use "sections/press";
+@use "sections/companies";
 @use "utils/flex";
 @use "utils/grid";
 @use "utils/utilities";
