--- a/app/scss/base/_typography.scss
+++ b/app/scss/base/_typography.scss
@@ -11,20 +11,20 @@
 
 h1 {
   font-size: clamp(2.5rem, 7vw, 4rem);
-  font-weight: 900;
+  font-weight: 500;
   letter-spacing: -0.5px;
   font-family: var(--heavy-wide-font);
 }
 
 h2 {
   font-size: clamp(0.8rem, 4vw, 1rem);
-  font-weight: 600;
+  font-weight: 500;
   letter-spacing: -0.1px;
 }
 
 h3 {
   font-size: 1.5rem;
-  font-weight: 600;
+  font-weight: 500;
   letter-spacing: -0.3px;
 
   @include breakpoint(lg-tablet) {
@@ -214,5 +214,9 @@ small {
       background-repeat: no-repeat;
       background-image: url("../images/illustrations/strikethrough-small.svg");
     }
+  }
+
+  &--remove-transform {
+    text-transform: none;
   }
 }
