--- a/app/scss/sections/_recruitment.scss
+++ b/app/scss/sections/_recruitment.scss
@@ -15,7 +15,7 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
 
-    @include breakpoint(sm-desktop) {
+    @include breakpoint(md-tablet) {
       grid-template-columns: repeat(1, 1fr);
     }
 
@@ -24,14 +24,45 @@
     }
 
     &__img {
-      width: 100px;
+      aspect-ratio: 1/1;
+      width: 100%;
       max-height: 300px;
+      min-height: 300px;
       object-fit: cover;
-      aspect-ratio: 1;
       border-radius: 10px;
 
-      &--full-width {
-        width: 100%;
+      @include breakpoint(md-tablet) {
+        max-height: 200px;
+        background-position: center center;
+      }
+    }
+
+    &__name {
+      display: flex;
+      flex-direction: column;
+      align-items: start;
+      justify-content: start;
+      gap: 0.5rem;
+
+      @include breakpoint(sm-tablet) {
+        flex-direction: row;
+        align-items: center;
+      }
+    }
+
+    &__member {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 1rem;
+
+      @include breakpoint(md-tablet) {
+        flex-direction: row;
+        align-items: start;
+      }
+
+      @include breakpoint(sm-tablet) {
+        flex-direction: column;
       }
     }
   }
@@ -163,7 +194,7 @@
     }
   }
 
-  .hybrid {
+  .schedule {
     @include breakpoint(md-tablet) {
       display: grid;
       grid-template-columns: repeat(2, 1fr);
@@ -242,11 +273,9 @@
     }
 
     &__location {
-      font-family: var(--heavy-compact-font);
+      font-family: var(--medium-font);
       color: var(--blue-50);
       font-size: 1.5rem;
-      font-weight: 400;
-      letter-spacing: 0.5px;
       line-height: 1;
     }
 
