--- a/app/scss/sections/_press.scss
+++ b/app/scss/sections/_press.scss
@@ -120,7 +120,7 @@
         grid-template-columns: repeat(2, 1fr);
       }
 
-      @include breakpoint(md-mobile) {
+      @include breakpoint(sm-tablet) {
         grid-template-columns: 1fr;
       }
     }
