--- a/app/scss/sections/_bundle.scss
+++ b/app/scss/sections/_bundle.scss
@@ -12,7 +12,7 @@
   &__illustrations {
     display: flex;
     position: relative;
-    margin-top: 4rem;
+    margin-top: 2rem;
 
     @include breakpoint(md-tablet) {
       flex-direction: column;
@@ -22,11 +22,11 @@
       object-fit: contain;
 
       @include breakpoint(sm-desktop) {
-        width: 450px;
+        width: 400px;
       }
 
       @include breakpoint(sm-tablet) {
-        width: 400px;
+        width: 380px;
       }
 
       @include breakpoint(md-mobile) {
@@ -43,6 +43,14 @@
     }
 
     &--i300 {
+      @include breakpoint(sm-desktop) {
+        flex-direction: column;
+      }
+    }
+
+    &--nanopod {
+      width: 500px;
+
       @include breakpoint(sm-desktop) {
         flex-direction: column;
       }
